bk_ida/gobmkida/c1/compute_surroundings
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_surroundings/src/engine/surround.c:1181:7: error: use of undeclared identifier 'byte_9AA88C'
if ( !byte_9AA88C[v108] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_surroundings/src/engine/surround.c:1186:26: error: use of undeclared identifier 'byte_9AA88D'
v111 = ( unsigned __int8)byte_9AA88D[v108]; 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_surroundings/src/engine/surround.c:1213:31: error: use of undeclared identifier 'byte_9AA88D'
&& ( v117 = ( unsigned __int8)byte_9AA88D[v108], v117 != 3) 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_surroundings/src/engine/surround.c:1218:13: error: use of undeclared identifier 'byte_9AA89E'
&& ( v119 = byte_9AA89E[v108], v119 != 3) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_surroundings/src/engine/surround.c:1217:5: error: use of undeclared identifier 'byte_9AA89F'
|| !byte_9AA89F[v108] 
    ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_surroundings/src/obj/1/surround.o] Error 1
